--- a/html/blog.html
+++ b/html/blog.html
@@ -23,74 +23,61 @@
 <body>
     <!-- ========================= ABOUT IMAGE =========================-->
     <div class="about_bg">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12">
-                    <a href="index.html"><img src="images/responsive-logo.png" class="responsive-logo img-fluid" alt="responsive-logo"></a>
+                <div class="col-6">
+                    <a href="../index.html"><img src="images/responsive-logo.png" class="responsive-logo img-fluid" alt="responsive-logo"></a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+                    <nav class="navbar navbar-toggleable-md navbar-light bg-faded p-0">
                         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
                             <span class="icon-menu"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="https://misla.org/">Home<span class="sr-only">(current)</span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="../html/chairman-speech.html">About</a></li>
+                                        <li><a class="dropdown-item" href="../index.html#team">Team</a></li>
+                                        <li><a class="dropdown-item" href="https://marty.world/press.html" target="_blank">Blog</a></li>
+                                        <li><a class="dropdown-item" href="../index.html#contact">Contact Us</a></li>
+                                    </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="admission-form.html">Admissions</a>
+                                    <a class="nav-link" href="../webdesign.html">Our Work</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="academics.html">Academics</a>
+                                    <a class="nav-link" target="_blank" href="https://marty.world/services.html">Hire Us</a>
                                 </li>
                                 <li class="nav-logo">
-                                    <a href="index.html" class="navbar-brand"><img src="images/logo.png" class="img-fluid" alt="logo"></a>
+                                    <a href="https://misla.org/" class="navbar-brand"><img src="images/logo.png" class="img-fluid" alt="logo"></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="research.html">Research</a>
+                                    <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSdnmw8vCrIUdqk2KWa3GaDEUxgyY36dDdEVSRcYh20r0Jk2BQ/viewform?c=0&w=1" target = "_blank">Scholarships</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Pages
+                                        Classes
                                     </a>
                                     <ul class="dropdown-menu">
-                                     <li><a class="dropdown-item" href="index-2.html">Home Style Two</a></li>
-                                            <li><a class="dropdown-item" href="index-video.html">Home Video</a></li>
-                                        <li><a class="dropdown-item" href="blog.html">Blog</a></li>
-                                        <li><a class="dropdown-item" href="betts-goes-tech-when-it-comes-to-the-black-community.html">Blog Post</a></li>
-                                        <li><a class="dropdown-item" href="index-landing-page.html">Landing Page</a></li>
-                                        <li><a class="dropdown-item" href="events.html">Events</a></li>
-                                        <li><a class="dropdown-item" href="course-detail.html">Course Details</a></li>
-                                        <li><a class="dropdown-item" href="campus-life.html">Campus Life</a></li>
-                                        <li><a class="dropdown-item" href="our-teachers.html">Our Teachers</a></li>
-                                        <li><a class="dropdown-item" href="teachers-single.html">Teachers Single</a></li>
-                                        <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
-                                        <li><a class="dropdown-item" href="shortcodes.html">Shortcodes</a></li>
-                                        <li class="dropdown">
-                                          <a class="dropdown-item dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Others Pages</a>
-                                          <ul class="dropdown-menu dropdown-menu1">
-                                            <li><a class="dropdown-item" href="notice-board.html">Notice Board</a></li>
-                                            <li><a class="dropdown-item" href="chairman-speech.html">Chairman Speech</a></li>
-                                            <li><a class="dropdown-item" href="sample-page.html">Sample Page</a></li>
-                                            <li><a class="dropdown-item" href="faq.html">FAQ</a></li>
-                                            <li><a class="dropdown-item" href="login.html">Login</a></li>
-                                            <li><a class="dropdown-item" href="sign-up.html">Sign Up</a></li>
-                                            <li><a class="dropdown-item" href="coming-soon.html">Coming Soon</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
+                                        <li><a class="dropdown-item" href="course-detail.html">Oct 1 - Nov 15</a></li>
+                                        <li><a class="dropdown-item" href="course-detail nov.html">November 26 - Dec 20</a></li>
+                                        <li><a class="dropdown-item" href="course-detail jan.html">Jan 7-31</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="../index.html#donate">Donate</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
             </div>
         </div>
+        <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <h1>Blog</h1>
