--- a/html/bootcamp-animation.html
+++ b/html/bootcamp-animation.html
@@ -37,35 +37,37 @@
 <body>
 <!-- ========================= ABOUT IMAGE =========================-->
 <div class="about_bg">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-6">
                 <a href="../index.html"><img src="images/responsive-logo.png" class="responsive-logo img-fluid" alt="responsive-logo"></a>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12">
-                <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+                <nav class="navbar navbar-toggleable-md navbar-light bg-faded p-0">
                     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
                         <span class="icon-menu"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="https://misla.org/" target = "_blank">Home<span class="sr-only">(current)</span></a>
+                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="https://misla.org/">Home<span class="sr-only">(current)</span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="../webdesign.html">Our Work</a></li>
+                                    <li><a class="dropdown-item" href="../html/chairman-speech.html">About</a></li>
+                                    <li><a class="dropdown-item" href="../index.html#team">Team</a></li>
+                                    <li><a class="dropdown-item" href="https://marty.world/press.html" target="_blank">Blog</a></li>
+                                    <li><a class="dropdown-item" href="../index.html#contact">Contact Us</a></li>
                                 </ul>
                             </li>
-
                             <li class="nav-item">
-                                <a class="nav-link" href="../html/chairman-speech.html">About</a>
+                                <a class="nav-link" href="../webdesign.html">Our Work</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../index.html#team">Team</a>
+                                <a class="nav-link" target="_blank" href="https://marty.world/services.html">Hire Us</a>
                             </li>
                             <li class="nav-logo">
-                                <a href="https://misla.org/" target = "_blank" class="navbar-brand"><img src="images/logo.png" class="img-fluid" alt="logo"></a>
+                                <a href="https://misla.org/" class="navbar-brand"><img src="images/logo.png" class="img-fluid" alt="logo"></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSdnmw8vCrIUdqk2KWa3GaDEUxgyY36dDdEVSRcYh20r0Jk2BQ/viewform?c=0&w=1" target = "_blank">Scholarships</a>
@@ -81,13 +83,15 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../index.html#donate" >Donate</a>
+                                <a class="nav-link" href="../index.html#donate">Donate</a>
                             </li>
                         </ul>
                     </div>
                 </nav>
             </div>
         </div>
+    </div>
+    <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <h1>2D ANIMATION BOOTCAMP</h1>
