--- a/html/computer-hardware.html
+++ b/html/computer-hardware.html
@@ -37,34 +37,37 @@
 <body>
     <!-- ========================= ABOUT IMAGE =========================-->
     <div class="about_bg">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12">
-                    <a href="index.html"><img src="images/responsive-logo.png" class="responsive-logo img-fluid" alt="responsive-logo"></a>
+                <div class="col-6">
+                    <a href="../index.html"><img src="images/responsive-logo.png" class="responsive-logo img-fluid" alt="responsive-logo"></a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+                    <nav class="navbar navbar-toggleable-md navbar-light bg-faded p-0">
                         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
                             <span class="icon-menu"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="https://misla.org/" target = "_blank">Home<span class="sr-only">(current)</span></a>
+                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="https://misla.org/">Home<span class="sr-only">(current)</span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="../webdesign.html">Our Work</a></li>
+                                        <li><a class="dropdown-item" href="../html/chairman-speech.html">About</a></li>
+                                        <li><a class="dropdown-item" href="../index.html#team">Team</a></li>
+                                        <li><a class="dropdown-item" href="https://marty.world/press.html" target="_blank">Blog</a></li>
+                                        <li><a class="dropdown-item" href="../index.html#contact">Contact Us</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="chairman-speech.html" target = "_blank">About</a>
+                                    <a class="nav-link" href="../webdesign.html">Our Work</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../index.html" target = "_blank">Team</a>
+                                    <a class="nav-link" target="_blank" href="https://marty.world/services.html">Hire Us</a>
                                 </li>
                                 <li class="nav-logo">
-                                    <a href="../index.html" target = "_blank" class="navbar-brand"><img src="images/logo.png" class="img-fluid" alt="logo"></a>
+                                    <a href="https://misla.org/" class="navbar-brand"><img src="images/logo.png" class="img-fluid" alt="logo"></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSdnmw8vCrIUdqk2KWa3GaDEUxgyY36dDdEVSRcYh20r0Jk2BQ/viewform?c=0&w=1" target = "_blank">Scholarships</a>
@@ -74,20 +77,21 @@
                                         Classes
                                     </a>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="bootcamp-animation.html">Animation</a></li>
-                                        <li><a class="dropdown-item" href="bootcamp-video-game-development.html">Game Programming</a></li>
-                                        <li><a class="dropdown-item" href="bootcamp-webdesign.html">Web Development</a></li>
-                                        <li><a class="dropdown-item" href="bootcamp-youtuber.html">Youtube Creator</a></li>
+                                        <li><a class="dropdown-item" href="course-detail.html">Oct 1 - Nov 15</a></li>
+                                        <li><a class="dropdown-item" href="course-detail nov.html">November 26 - Dec 20</a></li>
+                                        <li><a class="dropdown-item" href="course-detail jan.html">Jan 7-31</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                  <a class="nav-link" href="../index.html" target = "_blank">Donate</a>
+                                    <a class="nav-link" href="../index.html#donate">Donate</a>
                                 </li>
                             </ul>
-                          </div>
-                      </nav>
-                  </div>
-              </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </div>
+        <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <h1>Computer Hardware</h1>
@@ -218,67 +222,51 @@
                     </div>
                 </div>
             </section>
-            <!--//END ADMISSION DETAILS COURCES -->
-            <!--============================= Instagram Feed
-            <div id="instafeed"></div>
-            <!--//END Instagram feed JS -->
-            <!--============================= FOOTER =============================-->
-            <footer>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="subscribe">
-                                <h3>Newsletter</h3>
-                                <form id="subscribeform" action="php/subscribe.php" method="post">
-                                    <input class="signup_form" type="text" name="email" placeholder="Enter Your Email Address">
-                                    <button type="submit" class="btn btn-warning" id="js-subscribe-btn">SUBSCRIBE</button>
-                                    <div id="js-subscribe-result" data-success-msg="Success, Please check your email." data-error-msg="Oops! Something went wrong"></div>
-                                    <!-- // end #js-subscribe-result -->
-                                </form>
-                            </div>
-                        </div>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="subscribe">
+                        <h3>Newsletter</h3>
+                        <form name="NewsLetter" method="POST" data-netlify="true">
+                            <input class="signup_form" type="text" name="email" id="email" placeholder="Enter Your Email Address" required>
+                            <button type="submit" name="submit" class="btn btn-warning">SUBSCRIBE</button>
+                        </form>
                     </div>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <div class="foot-logo">
-                                <a href="index.html">
-                                    <img src="images/footer-logo.png" class="img-fluid" alt="footer_logo">
-                                </a>
-                                <p>2020 MISLA© copyright
-                                    <br> All rights reserved. Made by MISLA </p>
-                                </div>
-                            </div>
-                            <div class="col-md-2">
-                                <div class="sitemap">
-                                    <h3>Navigation</h3>
-                                    <ul>
-                                        <li><a href="chairman-speech.html">About</a></li>
-                                        <li><a href="bootcamps.html">Bootcamps</a></li>
-                                        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdnmw8vCrIUdqk2KWa3GaDEUxgyY36dDdEVSRcYh20r0Jk2BQ/viewform?c=0&w=1">Scholarships</a></li>
-                                        <li><a href="../index.html">Donate</a></li>
-                                        <!-- <li><a href="contact.html">Contact</a></li> -->
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                              <div class="address">
-                                  <h3>Contact us</h3>
-                                  <p>MISLA- A PROJECT OF VSEDC <br/>1130 W Slauson Ave. <br/> Los Angeles, CA 90044</p>
-                                  <p>Email : info@misla.org
-                                      <br> Phone : 323-753-2335</p>
-                                      <ul class="footer-social-icons">
-                                          <li><a href="https://www.facebook.com/MadeinSLA" target="_blank"><i class="fa fa-facebook fa-fb" aria-hidden="true"></i></a></li>
-                                          <li><a href="https://www.instagram.com/therealmisla" target="_blank"><i class="fa fa-instagram fa-in" aria-hidden="true"></i></a></li>
-                                          <li><a href="https://twitter.com/therealmisla" target="_blank"><i class="fa fa-twitter fa-tw" aria-hidden="true"></i></a></li>
-                                          <li><a href="https://www.youtube.com/channel/UC1tt-fn3rdTXJN2LkGgCtrw" target="_blank"><i class="fa fa-youtube fa-in" aria-hidden="true"></i></a></li>
-                                      </ul>
-                            </div>
-                            <div class="col-md-3">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </footer>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="foot-logo">
+                        <a href="https://vsedc.org/" target="_blank">
+                            <img src="images/footer-logo.png" class="img-fluid" alt="footer_logo">
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col-md-2">
+                </div>
+                <div class="col-md-4">
+                </div>
+                <div class="col-md-3">
+                    <div class="address">
+                        <h3>Contact us</h3>
+                        <p>MISLA- A PROJECT OF VSEDC <br/>1130 W Slauson Ave. <br/> Los Angeles, CA 90044</p>
+                        <p>Email : info@misla.org
+                            <br> Phone : 323-753-2335</p>
+                        <ul class="footer-social-icons">
+                            <li><a href="https://www.facebook.com/MadeinSLA" target="_blank"><i class="fa fa-facebook fa-fb" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.instagram.com/therealmisla" target="_blank"><i class="fa fa-instagram fa-in" aria-hidden="true"></i></a></li>
+                            <li><a href="https://twitter.com/therealmisla" target="_blank"><i class="fa fa-twitter fa-tw" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.youtube.com/channel/UC1tt-fn3rdTXJN2LkGgCtrw" target="_blank"><i class="fa fa-youtube fa-in" aria-hidden="true"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <p class="text-center">Copyright ©2020 - All Rights Reserved. Made by
+                <a href="https://misla.org/">MISLA</a></p>
+        </div>
+    </footer>
                     <!--//END FOOTER -->
                     <!-- jQuery, Bootstrap JS. -->
                     <script src="js/jquery.min.js"></script>
