--- a/html/faq.html
+++ b/html/faq.html
@@ -25,74 +25,61 @@
 <body>
     <!-- ========================= ABOUT IMAGE =========================-->
     <div class="about_bg">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12">
-                    <a href="index.html"><img src="images/responsive-logo.png" class="responsive-logo img-fluid" alt="responsive-logo"></a>
+                <div class="col-6">
+                    <a href="../index.html"><img src="images/responsive-logo.png" class="responsive-logo img-fluid" alt="responsive-logo"></a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+                    <nav class="navbar navbar-toggleable-md navbar-light bg-faded p-0">
                         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
                             <span class="icon-menu"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav">
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="admission-form.html">Admissions</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="academics.html">Academics</a>
-                                </li>
-                                <li class="nav-logo">
-                                    <a href="index.html" class="navbar-brand"><img src="images/logo.png" class="img-fluid" alt="logo"></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="research.html">Research</a>
-                                </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Pages
-                                    </a>
+                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="https://misla.org/">Home<span class="sr-only">(current)</span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="index-2.html">Home Style Two</a></li>
-                                        <li><a class="dropdown-item" href="index-video.html">Home Video</a></li>
-                                        <li><a class="dropdown-item" href="blog.html">Blog</a></li>
-                                        <li><a class="dropdown-item" href="betts-goes-tech-when-it-comes-to-the-black-community.html">Blog Post</a></li>
-                                        <li><a class="dropdown-item" href="index-landing-page.html">Landing Page</a></li>
-                                        <li><a class="dropdown-item" href="events.html">Events</a></li>
-                                        <li><a class="dropdown-item" href="course-detail.html">Course Details</a></li>
-                                        <li><a class="dropdown-item" href="campus-life.html">Campus Life</a></li>
-                                        <li><a class="dropdown-item" href="our-teachers.html">Our Teachers</a></li>
-                                        <li><a class="dropdown-item" href="teachers-single.html">Teachers Single</a></li>
-                                        <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
-                                        <li><a class="dropdown-item" href="shortcodes.html">Shortcodes</a></li>
-                                        <li class="dropdown">
-                                            <a class="dropdown-item dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Others Pages</a>
-                                            <ul class="dropdown-menu dropdown-menu1">
-                                                <li><a class="dropdown-item" href="notice-board.html">Notice Board</a></li>
-                                                <li><a class="dropdown-item" href="chairman-speech.html">Chairman Speech</a></li>
-                                                <li><a class="dropdown-item" href="sample-page.html">Sample Page</a></li>
-                                                <li><a class="dropdown-item" href="faq.html">FAQ</a></li>
-                                                <li><a class="dropdown-item" href="login.html">Login</a></li>
-                                                <li><a class="dropdown-item" href="sign-up.html">Sign Up</a></li>
-                                                <li><a class="dropdown-item" href="coming-soon.html">Coming Soon</a></li>
-                                            </ul>
-                                        </li>
+                                        <li><a class="dropdown-item" href="../html/chairman-speech.html">About</a></li>
+                                        <li><a class="dropdown-item" href="../index.html#team">Team</a></li>
+                                        <li><a class="dropdown-item" href="https://marty.world/press.html" target="_blank">Blog</a></li>
+                                        <li><a class="dropdown-item" href="../index.html#contact">Contact Us</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
+                                    <a class="nav-link" href="../webdesign.html">Our Work</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" target="_blank" href="https://marty.world/services.html">Hire Us</a>
+                                </li>
+                                <li class="nav-logo">
+                                    <a href="https://misla.org/" class="navbar-brand"><img src="images/logo.png" class="img-fluid" alt="logo"></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSdnmw8vCrIUdqk2KWa3GaDEUxgyY36dDdEVSRcYh20r0Jk2BQ/viewform?c=0&w=1" target = "_blank">Scholarships</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Classes
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="course-detail.html">Oct 1 - Nov 15</a></li>
+                                        <li><a class="dropdown-item" href="course-detail nov.html">November 26 - Dec 20</a></li>
+                                        <li><a class="dropdown-item" href="course-detail jan.html">Jan 7-31</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="../index.html#donate">Donate</a>
                                 </li>
                             </ul>
                         </div>
                     </nav>
                 </div>
             </div>
+        </div>
+        <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <h1>FAQ</h1>
@@ -229,9 +216,6 @@ What are the entry requirements for your courses?
             </div>
         </div>
     </div>
-    </div>
-    </div>
-    </div>
     <!--//End Faq -->
     <!--============================= FOOTER =============================-->
     <footer>
@@ -240,11 +224,9 @@ What are the entry requirements for your courses?
                 <div class="col-md-12">
                     <div class="subscribe">
                         <h3>Newsletter</h3>
-                        <form id="subscribeform" action="php/subscribe.php" method="post">
-                            <input class="signup_form" type="text" name="email" placeholder="Enter Your Email Address">
-                            <button type="submit" class="btn btn-warning" id="js-subscribe-btn">SUBSCRIBE</button>
-                            <div id="js-subscribe-result" data-success-msg="Success, Please check your email." data-error-msg="Oops! Something went wrong"></div>
-                            <!-- // end #js-subscribe-result -->
+                        <form name="NewsLetter" method="POST" data-netlify="true">
+                            <input class="signup_form" type="text" name="email" id="email" placeholder="Enter Your Email Address" required>
+                            <button type="submit" name="submit" class="btn btn-warning">SUBSCRIBE</button>
                         </form>
                     </div>
                 </div>
@@ -252,48 +234,33 @@ What are the entry requirements for your courses?
             <div class="row">
                 <div class="col-md-3">
                     <div class="foot-logo">
-                        <a href="index.html">
-                        <img src="images/footer-logo.png" class="img-fluid" alt="footer_logo">
-                    </a>
-                        <p>2016 © copyright
-                            <br> All rights reserved.</p>
+                        <a href="https://vsedc.org/" target="_blank">
+                            <img src="images/footer-logo.png" class="img-fluid" alt="footer_logo">
+                        </a>
+
                     </div>
                 </div>
                 <div class="col-md-2">
-                    <div class="sitemap">
-                        <h3>Navigation</h3>
-                        <ul>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="admission-form.html">Admissions </a></li>
-                            <li><a href="admission.html">Academics</a></li>
-                            <li><a href="research.html">Research</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="tweet_box">
-                        <h3>Tweets</h3>
-                        <div class="tweet-wrap">
-                            <div class="tweet"></div>
-                            <!-- // end .tweet -->
-                        </div>
-                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="address">
                         <h3>Contact us</h3>
-                        <p><span>Address: </span> Unisco university Albany, NY, USA. 11001</p>
-                        <p>Email : info@unisco.com
-                            <br> Phone : +91 555 668 986</p>
+                        <p>MISLA- A PROJECT OF VSEDC <br/>1130 W Slauson Ave. <br/> Los Angeles, CA 90044</p>
+                        <p>Email : info@misla.org
+                            <br> Phone : 323-753-2335</p>
                         <ul class="footer-social-icons">
-                            <li><a href="#"><i class="fa fa-facebook fa-fb" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin fa-in" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter fa-tw" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.facebook.com/MadeinSLA" target="_blank"><i class="fa fa-facebook fa-fb" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.instagram.com/therealmisla" target="_blank"><i class="fa fa-instagram fa-in" aria-hidden="true"></i></a></li>
+                            <li><a href="https://twitter.com/therealmisla" target="_blank"><i class="fa fa-twitter fa-tw" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.youtube.com/channel/UC1tt-fn3rdTXJN2LkGgCtrw" target="_blank"><i class="fa fa-youtube fa-in" aria-hidden="true"></i></a></li>
                         </ul>
                     </div>
                 </div>
             </div>
+            <p class="text-center">Copyright ©2020 - All Rights Reserved. Made by
+                <a href="https://misla.org/">MISLA</a></p>
         </div>
     </footer>
     <!--//END FOOTER -->
