--- a/html/shortcodes.html
+++ b/html/shortcodes.html
@@ -378,68 +378,51 @@
 <div id="instafeed"></div>
 <!--//END Instagram feed JS -->
 <!--============================= FOOTER =============================-->
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="subscribe">
-                    <h3>Newsletter</h3>
-                    <form id="subscribeform" action="php/subscribe.php" method="post">
-                        <input class="signup_form" type="text" name="email" placeholder="Enter Your Email Address">
-                        <button type="submit" class="btn btn-warning" id="js-subscribe-btn">SUBSCRIBE</button>
-                        <div id="js-subscribe-result" data-success-msg="Success, Please check your email." data-error-msg="Oops! Something went wrong"></div>
-                        <!-- // end #js-subscribe-result -->
-                    </form>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="subscribe">
+                        <h3>Newsletter</h3>
+                        <form name="NewsLetter" method="POST" data-netlify="true">
+                            <input class="signup_form" type="text" name="email" id="email" placeholder="Enter Your Email Address" required>
+                            <button type="submit" name="submit" class="btn btn-warning">SUBSCRIBE</button>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3">
-                <div class="foot-logo">
-                    <a href="index.html">
-                        <img src="images/footer-logo.png" class="img-fluid" alt="footer_logo">
-                    </a>
-                    <p>2016 © copyright
-                        <br> All rights reserved.</p>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="foot-logo">
+                        <a href="https://vsedc.org/" target="_blank">
+                            <img src="images/footer-logo.png" class="img-fluid" alt="footer_logo">
+                        </a>
+
                     </div>
                 </div>
                 <div class="col-md-2">
-                    <div class="sitemap">
-                        <h3>Navigation</h3>
-                        <ul>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="admission-form.html">Admissions </a></li>
-                            <li><a href="admission.html">Academics</a></li>
-                            <li><a href="research.html">Research</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="tweet_box">
-                        <h3>Tweets</h3>
-                        <div class="tweet-wrap">
-                            <div class="tweet"></div>
-                            <!-- // end .tweet -->
-                        </div>
-                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="address">
                         <h3>Contact us</h3>
-                        <p><span>Address: </span> Unisco university Albany, NY, USA. 11001</p>
-                        <p>Email : info@unisco.com
-                            <br> Phone : +91 555 668 986</p>
-                            <ul class="footer-social-icons">
-                                <li><a href="#"><i class="fa fa-facebook fa-fb" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin fa-in" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter fa-tw" aria-hidden="true"></i></a></li>
-                            </ul>
-                        </div>
+                        <p>MISLA- A PROJECT OF VSEDC <br/>1130 W Slauson Ave. <br/> Los Angeles, CA 90044</p>
+                        <p>Email : info@misla.org
+                            <br> Phone : 323-753-2335</p>
+                        <ul class="footer-social-icons">
+                            <li><a href="https://www.facebook.com/MadeinSLA" target="_blank"><i class="fa fa-facebook fa-fb" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.instagram.com/therealmisla" target="_blank"><i class="fa fa-instagram fa-in" aria-hidden="true"></i></a></li>
+                            <li><a href="https://twitter.com/therealmisla" target="_blank"><i class="fa fa-twitter fa-tw" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.youtube.com/channel/UC1tt-fn3rdTXJN2LkGgCtrw" target="_blank"><i class="fa fa-youtube fa-in" aria-hidden="true"></i></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
-        </footer>
+            <p class="text-center">Copyright ©2020 - All Rights Reserved. Made by
+                <a href="https://misla.org/">MISLA</a></p>
+        </div>
+    </footer>
         <!--//END FOOTER -->
         <!-- jQuery, Bootstrap JS. -->
         <script src="js/jquery.min.js"></script>
