--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
   <div class="header-top-area">
     <div class="container">
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-sm-2">
           <div class="logo">
             <a href="index.html"> <img class="img-responsive" src="assets/img/logo/MISLALogoWhiteOrange.png" alt="" /> </a>
           </div>
         </div>
-        <div class="col-md-10">
+        <div class="col-sm-10 p-0">
           <div class="mainmenu">
             <div class="navbar navbar-nobg">
               <div class="navbar-header">
@@ -72,12 +72,11 @@
               </div>
               <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-rig">
-                  <li><a class="smoth-scroll" href="html/chairman-speech.html" target="_blank">about</a></li>
-                  <li><a class="smoth-scroll" href="html/bootcamps.html" target="_blank">bootcamps</a></li>
-                  <li><a class="smoth-scroll" href="#team">team</a></li>
-                  <li><a class="smoth-scroll" href="webdesign.html">Our Work</a></li>
+                  <li><a class="smoth-scroll" href="html/chairman-speech.html">about</a></li>
+                  <li><a class="smoth-scroll" href="html/bootcamps.html">bootcamps</a></li>
+                  <li><a class="smoth-scroll" href="webdesign.html">Our Work </a></li>
                   <li><a class="smoth-scroll" href="https://marty.world/services.html" target="_blank">hire us</a></li>
-                  <li><a class="smoth-scroll" href="#testimonial">partners</a></li>
+                  <li><a class="smoth-scroll" href="index.html#testimonial">partners</a></li>
                   <li><a class="smoth-scroll" href="#donate">donate</a></li>
                   <li><a class="smoth-scroll" href="https://marty.world/press.html" target="_blank">blog</a></li>
                   <li><a class="smoth-scroll" href="#contact">contact</a></li>
@@ -387,7 +386,7 @@
                   <div class="package-price"><sub>$</sub> ???</div>
                 </div>
                 <div class="package-detail">
-                  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+                  <form action="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=ZMSR4TPCGSFMC¤cy_code=USD" method="post" target="_blank">
                     <input type="hidden" name="cmd" value="_s-xclick" /> <input type="hidden" name="hosted_button_id" value="X2CPN574F43KS" />
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" />
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1" />
@@ -501,6 +500,9 @@
             </div>
             <div class="form-group col-md-12">
               <textarea rows="6" name="message" class="form-control" id="message" placeholder="Enter Your Message" required="required"></textarea>
+            </div>
+            <div class="form-group col-md-12">
+              <div data-netlify-recaptcha="true"></div>
             </div>
             <div class="col-md-12"><button type="submit" name="submit">send message</button></div>
           </form>
