--- a/webdesign.html
+++ b/webdesign.html
@@ -74,7 +74,7 @@
   <div class="header-top-area">
     <div class="container">
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-sm-2">
           <!-- START LOGO -->
           <div class="logo">
             <a href="index.html" target = "_blank">
@@ -83,7 +83,7 @@
           </div>
           <!-- END LOGO -->
         </div>
-        <div class="col-md-9">
+        <div class="col-sm-10">
           <!-- START MAIN MENU -->
           <div class="mainmenu">
             <div class="navbar navbar-nobg">
@@ -99,23 +99,13 @@
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a class="smoth-scroll" href="index.html">home</a>
                   </li>
-                  <li><a class="smoth-scroll" href="/html/chairman-speech.html" target = "_blank">about</a>
-                  </li>
-                  <li><a class="smoth-scroll" href="/html/course-detail.html" target = "_blank">Bootcamps</a>
-                  </li>
-                  <li><a class="smoth-scroll" href="webdesign.html">Our Work</a></li>
-                  <li><a class="smoth-scroll" href="https://marty.world/services.html">hire us</a>
-                  </li>
-                  <!--
-                  <li><a class="smoth-scroll" href="#testimonial">Instructors</a>
-                  </li>
-                  -->
-                  <li><a class="smoth-scroll" href="#donate">donate</a>
-                  </li>
-                  <li><a class="smoth-scroll" href="#blog">blog</a>
-                  </li>
-                  <li><a class="smoth-scroll" href="#contact">contact</a>
-                  </li>
+                  <li><a class="smoth-scroll" href="html/chairman-speech.html">about</a></li>
+                  <li><a class="smoth-scroll" href="html/bootcamps.html">bootcamps</a></li>
+                  <li><a class="smoth-scroll" href="webdesign.html">Our Work </a></li>
+                  <li><a class="smoth-scroll" href="https://marty.world/services.html" target="_blank">hire us</a></li>
+                  <li><a class="smoth-scroll" href="#donate">donate</a></li>
+                  <li><a class="smoth-scroll" href="https://marty.world/press.html" target="_blank">blog</a></li>
+                  <li><a class="smoth-scroll" href="#contact">contact</a></li>
                 </ul>
               </div>
             </div>
@@ -623,6 +613,9 @@
       </div>
       <div class="form-group col-md-12">
         <textarea rows="6" name="message" class="form-control" id="message" placeholder="Enter Your Message" required="required"></textarea>
+      </div>
+      <div class="form-group col-md-12">
+        <div data-netlify-recaptcha="true"></div>
       </div>
       <div class="col-md-12"> <button type="submit" name="submit" >send message</button></div>
     </form>
